# 3D-Tennis-Lab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GEMINI.md  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
development/: README.md
development/ball_tracking/: __init__.py
development/ball_tracking/ball_heatmap/: __init__.py  datamodule.py  dataset.py  evaluate.py  heatmap_logger_v2.py  infer.py  lit_module.py  track.py  train.py
development/ball_tracking/ball_heatmap/callbacks/: sequence_debug_logger.py
development/ball_tracking/ball_heatmap/configs/: ball_heatmap_v1.yaml  config.yaml
development/ball_tracking/ball_heatmap/losses/: composer.py  frame.py  gan.py  metrics.py  regularization.py  semisup.py  supervised.py
development/ball_tracking/ball_heatmap/model/: __init__.py  ball_heatmap_model.py  decoder.py  heads.py  vit_encoder.py
development/ball_tracking/ball_heatmap/physics/: constraints.py  court.py
development/ball_tracking/ball_heatmap/tests/: test_adversary_wgan.py  test_ball_datamodule.py  test_ball_dataset.py  test_ball_lit_module.py  test_datamodule_sampler.py  test_dataset.py  test_dataset_views.py  test_heatmap_logger_v2.py  test_infer.py  test_losses_metrics.py  test_module_integration.py  test_semisup_selftrain.py  test_tracker_fusion.py  test_train_e2e.py
development/ball_tracking/ball_heatmap/trackers/: features.py  fuse.py  kalman.py
development/ball_tracking/ball_heatmap/training/: aug_seq.py  collate.py  datamodule.py  dataset.py  module.py  registry.py
development/ball_tracking/ball_heatmap/utils/: dynamic_lambda.py  traj_metrics.py  warp.py
development/ball_tracking/ball_tracker/: main.py
development/ball_tracking/ball_tracker/callbacks/: visualization.py
development/ball_tracking/ball_tracker/configs/: config.yaml
development/ball_tracking/ball_tracker/model/: factory.py  sequence_predictor.py  transformer.py
development/ball_tracking/ball_tracker/runner/: base_runner.py  infer.py  train.py
development/ball_tracking/ball_tracker/training/: datamodule.py  dataset.py  lit_module.py
development/ball_tracking/ball_tracker/utils/: normalization.py
development/ball_tracking/dino_detection/: __init__.py
development/ball_tracking/dino_detection/configs/: config.yaml
development/ball_tracking/dino_detection/model/: dinov3_fpn.py  heatmap_head.py  net.py
development/ball_tracking/hrnet_finetuning/: __init__.py  main.py
development/court_pose/01_vit_heatmap/: datamodule.py  dataset.py  lit_module.py  train.py
development/court_pose/dino_fpn/: datamodule.py  lit_module.py  train.py
development/court_pose/dino_fpn/model/: model.py  (+1 more)
development/court_pose/lite_cnn/: main.py
development/court_pose/vit_heatmap/: datamodule.py  dataset.py  lit_module.py  run_experiments.sh  train.py
development/court_pose/vit_heatmap_01/: lit_module.py  train.py
development/player_analysis/dino_detr/: __init__.py  main.py
development/player_analysis/dino_faster_rcnn/: README.md  main.py
development/player_analysis/rt_detr/: README.md  __init__.py  main.py
development/utils/callbacks/: heatmap_logger.py
development/utils/lightning/: base_datamodule.py  base_lit_module.py
development/utils/loading/: model_loader.py
development/utils/loss/: __init__.py  focal_loss.py  kl_divergence_loss.py  loss_registry.py
development/utils/tests/: test_model_loader.py
development/utils/transformers/: keypoint_transformer.py
docker/: Dockerfile  docker-compose.yml
docs/: index.md  modules.md  project_plan.md
docs/core/: branch_strategy.md  branching_strategy.md  commit_message_rule.md  project_plan.md
docs/dataset/: ball_and_player_dataset.md  ball_dataset.md  court_dataset.md
docs/development/: development_architecture_guide.md  training_guide_v2.md  vit_heatmap_training_design.md
docs/development/architecture/: 01_directory_structure.md  02_hydra_config.md  03_components.md  04_workflow.md
docs/docker/: command_list.md  project_env_guide.md
docs/plans/: court_keypoint_detection_plan.md  sequential_image_encoding_plan.md
docs/plans/ball_tracking/: implementation_plan.md
docs/plans/court_pose/: implementation_plan.md
docs/plans/event_detection/: implementation_plan.md
docs/plans/player_analysis/: implementation_plan.md
experiments/pnp/: README.md  estimate_pose_ippe_lm.py  make_id_visuals.py  pnp_demo.py  pnp_ui_trackbar.py
experiments/pnp/configs/: camera_example.yaml  config.yaml  court_spec.yaml
experiments/pnp/out_id_visuals/: id_name_mapping.csv
experiments/pnp/out_pnp_demo/: results.csv
experiments/pnpkit/: PNPKIT-SPEC-0001-architecture-contract-v1.0.md  implementation_plan.md
experiments/pnpkit/apps/: multi_bundle_runner.py
experiments/pnpkit/configs/: config.yaml
experiments/pnpkit/src/: api.py
experiments/pnpkit/tests/: test_bundle_adjust.py  test_estimate_k.py  test_intrinsics_refine.py  test_refine.py  test_stages.py
notebooks/: ball_and_player_data_analysis.ipynb  ball_data_analysis.ipynb  court_data_analysis.ipynb
notebooks/md/: ball_and_player_data_analysis.md
tb_logs/vit_heatmap_v1/version_0/: hparams.yaml
tools/: build_non_annotation.py
tools/collect/: collect_files.py
tools/convert/: ipynb2md.py  md2ipynb.py
tools/court_annotator/: README.md
tools/court_annotator/app/: bootstrap.py  discover.py  main.py
tools/court_annotator/configs/: __init__.py  annotator.yaml  thresholds.yaml  ui.yaml
tools/court_annotator/core/: geometry.py  types.py
tools/court_annotator/domain/: rules.py  state.py
tools/court_annotator/io/: ann_aggregator.py  coco_writer.py  image_saver.py  meta.py  resume_manager.py  video.py
tools/court_annotator/pipeline/: export.py  fit.py  persist.py  preprocess.py  render.py  runner.py  source.py  state_fetch.py  validate.py
tools/court_annotator/ui/: draw.py  input_adapter.py  loop.py
tools/download/: youtube_download.yaml  youtube_downloader.py
tools/sync/: local2drive.py
tools/visualize/: visualize_dataset.py
(+214 files in other folders)
