[tool.poetry]
name = "3d_tennis_lab"
version = "0.0.1"
description = "A project for 3D analysis of tennis matches, tracking court, players, and ball."
authors = ["motoki <kamimura098@gamil.com>"]
repository = "https://github.com/motoki/3d-tennis-lab"
documentation = "https://motoki.github.io/3d-tennis-lab/"
readme = "README.md"
packages = [
  {include = "3d_tennis_system"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.8.0"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
pillow = "^11.3.0"
tensorboard = "^2.20.0"
tqdm = "^4.67.1"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.5.2"
opencv-python = "^4.12.0.88"
numpy = "^2.2.6"
jupyterlab = "^4.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["3d_tennis_system", "development"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["3d_tennis_system"]
