[tool.poetry]
name = "3d_tennis_lab"
version = "0.0.1"
description = "A project for 3D analysis of tennis matches, tracking court, players, and ball."
authors = ["motoki <kamimura098@gamil.com>"]
repository = "https://github.com/motoki/3d-tennis-lab"
documentation = "https://motoki.github.io/3d-tennis-lab/"
readme = "README.md"
packages = [
  {include = "3d_tennis_system"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.8.0"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
pillow = "^11.3.0"
tensorboard = "^2.20.0"
tqdm = "^4.67.1"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.5.2"
opencv-python = "^4.12.0.88"
numpy = "^2.2.6"
jupyterlab = "^4.2.3"
albumentations = "^2.0.8"
timm = "^1.0.19"
transformers = "^4.55.0"
dotmap = "^1.3.30"
rich = "13.7.1"
yt-dlp = "^2025.8.11"
# 4D-Humans demo requirements
smplx = "==0.1.28"
pyrender = "^0.1.45"
yacs = "^0.1.8"
scikit-image = "^0.24.0"
einops = "^0.8.0"
dill = "^0.3.8"
trimesh = "^4.5.3"
gdown = "^5.2.0"
# chumpy and detectron2 are provided via git
chumpy = {git = "https://github.com/mattloper/chumpy"}
# For runtime we will install detectron2 after CUDA-ready torch in Dockerfile

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["3d_tennis_system"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests", "development"]
addopts = "--import-mode=importlib --cov=. --cov-branch --cov-report=xml"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
exclude = [
  ".venv",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache",
  "site",
  "docs/_site",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
# 研究用に緩め：最低限のバグ/互換/スタイルに限定
select = [
    "E",    # pycodestyle (一部)
    "W",    # pycodestyle 警告
    "F",    # pyflakes（未定義名など致命的）
    "I",    # isort（インポート整列）
    "UP",   # pyupgrade（将来互換）
    "B",    # bugbear（実害の出やすいバグ起因のみ軽く）
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff 自身の軽いもの
]
ignore = [
    "E501",  # 長行は許容（研究メモ等の可読性重視）
]
preview = true

[tool.ruff.lint.per-file-ignores]
# これらの領域は「かなり緩め」：F（致命的）以外を実質オフ
"tools/**" = ["E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
"experiments/**" = ["E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
"development/**" = ["E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
"developments/**" = ["E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
"**/tests/**" = ["E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]


[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["3d_tennis_system"]
